--- a/bio.html
+++ b/bio.html
@@ -14,7 +14,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="bio.html">About</a></li>
 							<li><a href="#">CV</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 	</div>
