--- a/bio.html
+++ b/bio.html
@@ -1,14 +1,21 @@
+<!--Name:Rojal pradhan UNID:17425095-->
 <!DOCTYPE html>
 <html>
+<!--html start-->
 <head>
+<!--head part-->
 	<title>my biography </title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
+<!--head part ends-->
+
 <body>
+<!--body starts-->
 <header>
+<!--header part starts-->
 			<div class="ee">
 				<div class="imagehover">
-					<img src="images/rojal_logo.gif" alt="logo" />
+					<img src="images/rojal_logo.gif" alt="logo">
 				</div>
 				<div class="ff">
 					<p>Rojal Pradhan</p>
@@ -28,6 +35,7 @@
 				<img src="images/finall.jpg" alt="my bio">
 			</div>
 		</header>
+		<!--header part ends-->
 	<div class="me">
 		<h3>About Me</h3>
 			<img src="images/rojal.jpg" alt="MEE">
@@ -49,6 +57,7 @@
 			</div>
 
 <footer>
+<!--footer part start-->
 				
 			<div id="contact">
 				<h2>Connect with me</h2>
@@ -66,6 +75,9 @@
 				copyright all right reserved @2017
 			</div>
 </footer>
+<!--footer part ends-->
 
 </body>
+<!--body ends-->
 </html>
+<!--html ends-->
